# de-zoomcamp

./: .gitignore
week_2/dagster/taxi_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
week_2/dagster/taxi_pipeline/taxi_pipeline/: assets.py  config.py  definitions.py  jobs.py  partitions.py  schedules.py
week_2/dagster/taxi_pipeline/tmp2w6qx_e9/history/: runs.db
week_2/dagster/taxi_pipeline/tmp2w6qx_e9/history/runs/: 24838a2b-eb8a-461b-87ce-fcb9b087d5bc.db  62314de2-5829-4b08-b3c1-cfc2cf6d04a0.db  989b29dd-03c2-40f6-8291-47b38c64bd55.db  index.db
week_2/dagster/taxi_pipeline/tmp2w6qx_e9/schedules/: schedules.db
week_2/dagster/taxi_pipeline/tmp6dm036mr/history/: runs.db
week_2/dagster/taxi_pipeline/tmp6dm036mr/history/runs/: index.db
week_2/dagster/taxi_pipeline/tmp6dm036mr/schedules/: schedules.db
week_2/dagster/taxi_pipeline/tmpfy37_j1n/history/: runs.db
week_2/dagster/taxi_pipeline/tmpfy37_j1n/history/runs/: 1b7f4879-b100-420c-a849-04dc1219b8a8.db  1c3822da-3ae2-4b54-86d2-943130f635fc.db  239e3a66-300b-4fb5-ad35-8bc67987cf81.db  27f155ff-70de-47ea-a103-53a91492fe4d.db  3e89c08e-3830-4642-9752-9fd6e10e485e.db  55ef735b-aa3f-4018-bb4d-0bf51337c862.db  6bb0d2a8-a74b-421d-b770-df9e12965dfe.db  71cf96d6-b19b-4c42-aee4-c21c453fb7fe.db  776be674-30de-41c0-bb4a-b5c9e679c529.db  7905c5dd-581d-41a9-b6bb-6c22575c9dc8.db  9d20c56d-a72b-48f6-8d7e-48c0a2eaf41b.db  (+9 more)
week_2/dagster/taxi_pipeline/tmpfy37_j1n/schedules/: schedules.db
week_2/dagster/taxi_pipeline/tmpqbbe94_a/history/: runs.db
week_2/dagster/taxi_pipeline/tmpqbbe94_a/schedules/: schedules.db
(+97 files in other folders)
