[project]
name = "taxi_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "taxi_pipeline.definitions"
project_name = "taxi_pipeline"

[tool.setuptools.packages.find]
exclude=["taxi_pipeline_tests"]
